[client] fix side scroll on listing pages
## Motivation

sometimes the listing pages are scrolling on the x-axis

## Change description

- Removed the x-axis scroll since we don't want it on any root page layout, only internal components should have horizontal scroll

## Checklists

- [x] Security impact of change has been considered
- Data Incident Risk: 
    - [x] None
    - [ ] Low
    - [ ] High

--- a/client/src/app/components/layouts/MainContent/MainContent.module.css
+++ b/client/src/app/components/layouts/MainContent/MainContent.module.css
@@ -13,6 +13,7 @@
   padding: 0 var(--mantine-spacing-lg);
   flex-grow: 1; /* Takes up all available space between header and footer */
   overflow-y: auto; /* Enables vertical scrolling if content overflows */
+  overflow-x: hidden; /* Prevents horizontal scrolling */
   justify-content: flex-start; /* Align text at the top */
   align-items: flex-start; /* Align text to the left */
   flex-direction: column; /* Stack paragraphs vertically */
